<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/la_emi_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bodyBack"
        android:paddingTop="28dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/invoice_showroom"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/invoiceShowroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/down_payment"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/downPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/pc_variable"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pcPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/pc_fixed"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pcFixed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/interest_rate"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/interestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/flat_tenure"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/flatTenure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/advance_emi"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/advanceEmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/loan_amount"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/loanAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/invoice_chaplot"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/invoiceCIPL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/ltv"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ltv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="60dp"
                android:background="@color/tabColor"
                android:minHeight="60dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:text="@string/emi_calc"
                android:textColor="@color/textColor"
                android:textColorLink="@android:color/background_dark"
                android:textSize="20dp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/short_emi"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/shortEMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColorLink="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/emi"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:height="60dp"
                android:minHeight="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/pmt_tenure"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorLink="@android:color/background_dark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pmtTenure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:height="40dp"
                android:background="@drawable/textbox"
                android:ems="8"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:minHeight="40dp"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>
</ScrollView>

